--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "test": "test"
   },
   "dependencies": {
-    "node-mongodb-native": "~1.4.0-rc7",
-    "mongodb": "~1.3.23",
     "node-terminal": "~0.1.1"
   },
   "devDependencies": {},
@@ -19,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/noevil/fusejs.git"
+    "url": "https://github.com/feychenie/fusejs.git"
   },
   "keywords": [
     "nodejs",
@@ -29,6 +27,6 @@
   "license": "BSD",
   "gypfile": true,
   "bugs": {
-    "url": "https://github.com/noevil/fusejs/issues"
+    "url": "https://github.com/feychenie/fusejs/issues"
   }
 }
